@@ -1,8 +1,0 @@
-<form method="post" action="/cgi-bin/npg/instrument_status/;create">
-  <input type="hidden" name="id_instrument" value="7" />
-  <textarea style="float:left;" name="comment" rows="3" cols="50"></textarea>
-  <select name="id_instrument_status_dict" id="id_instrument_status_dict">
-    <option value="5">request approval</option>
-  </select>
-  <input type="submit" value="save" />
-</form>
